<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryLight"
    tools:context="com.example.pablo.aplicacioncoursera.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/tilNombre"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/tiet_nombre"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"
            android:id="@+id/tietNombre"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/llBotonFecha"
        android:layout_below="@+id/tilNombre"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:id="@+id/btnFecha"
            android:text="@string/text_button_fecha"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/tilFecha"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llBotonFecha">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/tiet_fecha"
            android:layout_height="wrap_content"
            android:id="@+id/tietFecha"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/tilTelefono"
        android:layout_below="@+id/tilFecha"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiet_telefono"
            android:inputType="phone"
            android:id="@+id/tietTelefono"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/tilEMail"
        android:layout_below="@id/tilTelefono"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/tiet_e_mail"
            android:layout_height="wrap_content"
            android:id="@+id/tietEMail"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/tilDescripcion"
        android:layout_below="@+id/tilEMail"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/tiet_descripcion"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            android:id="@+id/tietDescripcion"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/llBoton"
        android:layout_below="@+id/tilDescripcion"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:text="@string/text_button_siguiente"
            android:background="@color/colorButton"
            android:id="@+id/btnSiguiente"
            android:layout_height="wrap_content" />
    </LinearLayout>


</RelativeLayout>
